# aoc-2025

./: .gitignore  CMakeLists.txt
include/: parsing.hpp
src/2025/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp
